# gpustitch

./: .gitmodules  CMakeLists.txt  README.md  example_rig_spec.toml
include/: cam_params.hpp  config_utils.hpp  cuda_stream.hpp  gpustitch_common.hpp  image.hpp  overlap.hpp  stitcher.hpp  stitcher_params.hpp
src/: CMakeLists.txt  blend.cu  blend.h  blender.cpp  blender.hpp  cam_stitch_ctx.hpp  config_utils.cpp  cuda_event.cpp  cuda_event.hpp  cuda_helpers.cu  cuda_helpers.h  cuda_stream.cpp  cuda_stream.hpp  gauss_laplace.cu  gauss_laplace.h  gaussian_kernel.hpp  image.cpp  image.hpp  image_cuda_array.cpp  image_cuda_array.hpp  libgpustitch.pc.in  main.cpp  math_util.cpp  math_util.hpp  profile_timer.cpp  profile_timer.hpp  project_cam.cu  project_cam.h  pyramid.cpp  pyramid.hpp  stitcher.cpp  stitcher_impl.cpp  stitcher_impl.hpp
