cmake_minimum_required(VERSION 3.8)

project(gpustitch
	LANGUAGES CXX CUDA
	VERSION 0.0.1)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(EXTERNAL_LIB_HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/thirdparty)
add_subdirectory(src)
